5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1724_2525.log
== SUBMITION (2019-05-14 11:55:41) 
-- CODE:
n = int(input("digite um no int: "))
y = 0
d = 0
while(y<n):
	y=y+1
	if(n%y==0):
		print(y)
		d=d+1
if(d==1):
	print("1 divisor")
else(d, "divisores")
-- EXECUTION TIME:
0.198157
-- ERROR:
  File "/home/codebench/codes/1724/2525/main.py", line 11
    else(d, "divisores")
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:55:55) 
-- CODE:
n = int(input("digite um no int: "))
y = 0
d = 0
while(y<n):
	y=y+1
	if(n%y==0):
		print(y)
		d=d+1
if(d==1):
	print("1 divisor")
else:
	print(d, "divisores")
-- EXECUTION TIME:
0.189326
-- TEST CASE 1:
---- input:
12
---- correct output:
1
2
3
4
6
12
6 divisores
---- user output:
1
2
3
4
6
12
6 divisores
-- TEST CASE 2:
---- input:
49
---- correct output:
1
7
49
3 divisores
---- user output:
1
7
49
3 divisores
-- TEST CASE 3:
---- input:
30
---- correct output:
1
2
3
5
6
10
15
30
8 divisores
---- user output:
1
2
3
5
6
10
15
30
8 divisores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:55:59) 
-- CODE:
n = int(input("digite um no int: "))
y = 0
d = 0
while(y<n):
	y=y+1
	if(n%y==0):
		print(y)
		d=d+1
if(d==1):
	print("1 divisor")
else:
	print(d, "divisores")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:56:12) 
-- CODE:
n = int(input("digite um no int: "))
y = 0
d = 0
while(y<n):
	y=y+1
	if(n%y==0):
		print(y)
		d=d+1
if(d==1):
	print("1 divisor")
else:
	print(d, "divisores")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:56:24) 
-- CODE:
n = int(input("digite um no int: "))
y = 0
d = 0
while(y<n):
	y=y+1
	if(n%y==0):
		print(y)
		d=d+1
if(d==1):
	print("1 divisor")
else:
	print(d, "divisores")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:56:32) 
-- CODE:
n = int(input("digite um no int: "))
y = 0
d = 0
while(y<n):
	y=y+1
	if(n%y==0):
		print(y)
		d=d+1
if(d==1):
	print("1 divisor")
else:
	print(d, "divisores")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:56:47) 
-- CODE:
n = int(input("digite um no int: "))
y = 0
d = 0
while(y<n):
	y=y+1
	if(n%y==0):
		print(y)
		d=d+1
if(d==1):
	print("1 divisor")
else:
	print(d, "divisores")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:56:54) 
-- CODE:
n = int(input("digite um no int: "))
y = 0
d = 0
while(y<n):
	y=y+1
	if(n%y==0):
		print(y)
		d=d+1
if(d==1):
	print("1 divisor")
else:
	print(d, "divisores")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:56:58) 
-- CODE:
n = int(input("digite um no int: "))
y = 0
d = 0
while(y<n):
	y=y+1
	if(n%y==0):
		print(y)
		d=d+1
if(d==1):
	print("1 divisor")
else:
	print(d, "divisores")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:57:10) 
-- CODE:
n = int(input("digite um no int: "))
y = 0
d = 0
while(y<n):
	y=y+1
	if(n%y==0):
		print(y)
		d=d+1
if(d==1):
	print("1 divisor")
else:
	print(d, "divisores")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:57:24) 
-- CODE:
n = int(input("digite um no int: "))
y = 0
d = 0
while(y<n):
	y=y+1
	if(n%y==0):
		print(y)
		d=d+1
if(d==1):
	print("1 divisor")
else:
	print(d, "divisores")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:57:31) 
-- CODE:
n = int(input("digite um no int: "))
y = 0
d = 0
while(y<n):
	y=y+1
	if(n%y==0):
		print(y)
		d=d+1
if(d==1):
	print("1 divisor")
else:
	print(d, "divisores")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:57:36) 
-- CODE:
n = int(input("digite um no int: "))
y = 0
d = 0
while(y<n):
	y=y+1
	if(n%y==0):
		print(y)
		d=d+1
if(d==1):
	print("1 divisor")
else:
	print(d, "divisores")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:57:45) 
-- CODE:
n = int(input("digite um no int: "))
y = 0
d = 0
while(y<n):
	y=y+1
	if(n%y==0):
		print(y)
		d=d+1
if(d==1):
	print("1 divisor")
else:
	print(d, "divisores")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:58:13) 
-- CODE:
n = int(input("digite um no int: "))
y = 0
d = 0
while(y<n):
	y=y+1
	if(n%y==0):
		print(y)
		d=d+1
if(d==1):
	print("1 divisor")
else:
	print(d, "divisores")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:58:28) 
-- CODE:
n = int(input("digite um no int: "))
y = 0
d = 0
while(y<n):
	y=y+1
	if(n%y==0):
		print(y)
		d=d+1
if(d==1):
	print("1 divisor")
else:
	print(d, "divisores")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:58:35) 
-- CODE:
n = int(input("digite um no int: "))
y = 0
d = 0
while(y<n):
	y=y+1
	if(n%y==0):
		print(y)
		d=d+1
if(d==1):
	print("1 divisor")
else:
	print(d, "divisores")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:58:42) 
-- CODE:
n = int(input("digite um no int: "))
y = 0
d = 0
while(y<n):
	y=y+1
	if(n%y==0):
		print(y)
		d=d+1
if(d==1):
	print("1 divisor")
else:
	print(d, "divisores")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:58:57) 
-- CODE:
n = int(input("digite um no int: "))
y = 0
d = 0
while(y<n):
	y=y+1
	if(n%y==0):
		print(y)
		d=d+1
if(d==1):
	print("1 divisor")
else:
	print(d, "divisores")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:59:06) 
-- CODE:
n = int(input("digite um no int: "))
y = 0
d = 0
while(y<n):
	y=y+1
	if(n%y==0):
		print(y)
		d=d+1
if(d==1):
	print("1 divisor")
else:
	print(d, "divisores")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:59:20) 
-- CODE:
n = int(input("digite um no int: "))
y = 0
d = 0
while(y<n):
	y=y+1
	if(n%y==0):
		print(y)
		d=d+1
if(d==1):
	print("1 divisor")
else:
	print(d, "divisores")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:59:29) 
-- CODE:
n = int(input("digite um no int: "))
y = 0
d = 0
while(y<n):
	y=y+1
	if(n%y==0):
		print(y)
		d=d+1
if(d==1):
	print("1 divisor")
else:
	print(d, "divisores")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:59:38) 
-- CODE:
n = int(input("digite um no int: "))
y = 0
d = 0
while(y<n):
	y=y+1
	if(n%y==0):
		print(y)
		d=d+1
if(d==1):
	print("1 divisor")
else:
	print(d, "divisores")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:59:51) 
-- CODE:
n = int(input("digite um no int: "))
y = 0
d = 0
while(y<n):
	y=y+1
	if(n%y==0):
		print(y)
		d=d+1
if(d==1):
	print("1 divisor")
else:
	print(d, "divisores")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
